--- a/homeWorks/tarea5/personal-web-page-2.0/styles.css
+++ b/homeWorks/tarea5/personal-web-page-2.0/styles.css
@@ -29,6 +29,19 @@ h2 {
     font-size: 2.25em;
 }
 
+.btn {
+    padding: 10px 20px;
+    font-size: 1.1em;
+    font-weight: 500;
+    background-color: var(--primary-color);
+    color: var(--white);
+    border-radius: 8px;
+    transition: .7s ease;
+}   
+    .btn:hover {
+        cursor: pointer;
+        transform: rotateZ(-2deg) scale(1.2);
+    }
 
 header {
     display: flex;
@@ -44,7 +57,12 @@ header {
     .logo {
         color: var(--white);
         font-size: 1.6em;
+        transition: .3s ease;
     }
+        .logo:hover {
+            color: var(--background);
+            cursor: pointer;
+        }
 
     header nav {
         display: flex;
@@ -54,9 +72,10 @@ header {
     }
         header nav a {
             color: var(--white);
+            transition: .3s ease;
         }
             header nav a:hover {
-                opacity: .7;
+                color: var(--background);
                 cursor: pointer;
             }
 
@@ -129,7 +148,7 @@ main {
     }
         #about img {
             width: 394px;
-            height: 405px;
+            height: 425px;
             object-fit: cover;
             border-radius: 70px 0px 70px 0px;
         }
@@ -142,7 +161,7 @@ main {
         }
             .about-info p {
                 text-align: justify;
-                font-size: 1.3em;
+                font-size: 1.25em;
             }
 
             .about-info .btn {
