--- a/homeWorks/tarea5/personal-page/index.css
+++ b/homeWorks/tarea5/personal-page/index.css
@@ -117,13 +117,16 @@ body {
         .pasatiempos .cards {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 1.5rem;
+            gap: 4.5rem 1.5rem;
+            margin-top: 70px;
         }
   
         .pasatiempos .card {
             background-color: #FFFFFF;
             padding: 1.5rem;
+            margin-top: 20px;
             border-radius: 12px;
+            position: relative;
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
             transition: transform 0.2s;
         }
@@ -132,9 +135,26 @@ body {
             transform: translateY(-5px);
             cursor: pointer;
         }
+
+        .pasatiempos .card-img {
+            position: absolute;
+            top: -60px;
+            left: 50%;
+            transform: translateX(-50%);
+            overflow: hidden;
+            border-radius: 12px;
+            background-color: var(--text-secundary);
+            width: 200px;
+            height: 120px;
+        }
+            .pasatiempos .card-img img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
    
         .pasatiempos .card h3 {
-            margin-top: 0;
+            margin-top: 60px;
             color: var(--color-btn);
             font-size: 1.25rem;
         }
