--- a/homeWorks/tarea8/css/style.css
+++ b/homeWorks/tarea8/css/style.css
@@ -326,12 +326,13 @@ main {
         flex-direction: column;
         align-items: center;
         text-align: center;
+        font-weight: 500;
         gap: .5rem;
         width: 160px;
         height: 175px;
         padding: 1rem;
         background-color: #6b9ac4;
-        color: white;
+        color: #301A4B;
         border-radius: 0 0 20px 20px;
     }
 
