--- a/homeWorks/tarea2/estilos.css
+++ b/homeWorks/tarea2/estilos.css
@@ -88,7 +88,7 @@ section {
             justify-content: center;
             border-radius: 6px;
             padding: 16px;
-            background-color: rgba(32, 33, 109, 0.153);
+            background-color: #20216d27;
             margin-top: 30px;
             max-width: 250px;
         }
